Small doc fixes, small swagger fix
