# swagger.yaml
@@ -1,258 +1,222 @@
----
-swagger: "2.0"
+swagger: '2.0'
 info:
-  description: "API for storing and retrieving messages for a user"
-  version: "v1"
-  title: "User Messages"
+  description: API for storing and retrieving messages for a user
+  version: v1
+  title: User Messages
   contact:
-    name: "usermessagesupport@bestcompany.com"
+    name: tomjaroszewskiwork@gmail.com
 tags:
-- name: "user message"
+  - name: user message
 schemes:
-- "https"
+  - https
 paths:
-  /v1/users/{userId}/messages:
+  '/v1/users/{userId}/messages':
     get:
       tags:
-      - "user message"
-      summary: "Returns a paginated list of user messages, sorted by generation date"
-      description: ""
-      operationId: "getMessageList"
+        - user message
+      summary: 'Returns a paginated list of user messages, sorted by generation date'
+      description: ''
+      operationId: getMessageList
       produces:
-      - "application/json"
+        - application/json
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User id"
-        required: true
-        type: "string"
-        x-example: "bob.dole"
-        x-exportParamName: "UserId"
-      - name: "page"
-        in: "query"
-        description: "Which page"
-        required: false
-        type: "integer"
-        default: 0
-        minimum: 1
-        format: "int32"
-        x-exportParamName: "Page"
-      - name: "size"
-        in: "query"
-        description: "Page size"
-        required: false
-        type: "integer"
-        default: 50
-        maximum: 100
-        minimum: 1
-        format: "int32"
-        x-exportParamName: "Size"
+        - name: userId
+          in: path
+          description: User id
+          required: true
+          type: string
+          x-example: bob.dole
+        - name: page
+          in: query
+          description: Which page
+          required: false
+          type: integer
+          default: 0
+          minimum: 1
+          format: int32
+        - name: size
+          in: query
+          description: Page size
+          required: false
+          type: integer
+          default: 50
+          maximum: 100
+          minimum: 1
+          format: int32
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/UserMessageList"
-        404:
-          description: "Message not found"
+            $ref: '#/definitions/UserMessageList'
     post:
       tags:
-      - "user message"
-      summary: "Adds a message for the user"
-      description: ""
-      operationId: "addMessage"
+        - user message
+      summary: Adds a message for the user
+      description: ''
+      operationId: addMessage
       consumes:
-      - "application/json"
+        - application/json
       produces:
-      - "application/json"
+        - application/json
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User id"
-        required: true
-        type: "string"
-        x-example: "bob.dole"
-        x-exportParamName: "UserId"
-      - in: "body"
-        name: "body"
-        description: "New message"
-        required: false
-        schema:
-          $ref: "#/definitions/MessageBody"
-        x-exportParamName: "Body"
-      responses:
-        200:
-          description: "successful operation"
+        - name: userId
+          in: path
+          description: User id
+          required: true
+          type: string
+          x-example: bob.dole
+        - in: body
+          name: body
+          description: New message
+          required: false
           schema:
-            $ref: "#/definitions/UserMessage"
-        400:
-          description: "Message too long or null"
-  /v1/users/{userId}/messages/{messageId}:
+            $ref: '#/definitions/MessageBody'
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/UserMessage'
+        '400':
+          description: Message too long or null
+  '/v1/users/{userId}/messages/{messageId}':
     get:
       tags:
-      - "user message"
-      summary: "Returns a users message"
-      description: ""
-      operationId: "getMessage"
+        - user message
+      summary: Returns a users message
+      description: ''
+      operationId: getMessage
       produces:
-      - "application/json"
+        - application/json
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User id"
-        required: true
-        type: "string"
-        x-example: "bob.dole"
-        x-exportParamName: "UserId"
-      - name: "messageId"
-        in: "path"
-        description: "Message id"
-        required: true
-        type: "integer"
-        format: "int64"
-        x-example: 3434523
-        x-exportParamName: "MessageId"
+        - name: userId
+          in: path
+          description: User id
+          required: true
+          type: string
+          x-example: bob.dole
+        - name: messageId
+          in: path
+          description: Message id
+          required: true
+          type: integer
+          format: int64
+          x-example: 3434523
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/UserMessage"
-        404:
-          description: "Message not found"
+            $ref: '#/definitions/UserMessage'
+        '404':
+          description: Message not found
     delete:
       tags:
-      - "user message"
-      summary: "Deletes a users message"
-      description: ""
-      operationId: "deleteMessage"
+        - user message
+      summary: Deletes a users message
+      description: ''
+      operationId: deleteMessage
       produces:
-      - "application/json"
+        - application/json
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User id"
-        required: true
-        type: "string"
-        x-example: "bob.dole"
-        x-exportParamName: "UserId"
-      - name: "messageId"
-        in: "path"
-        description: "Message id"
-        required: true
-        type: "integer"
-        format: "int64"
-        x-example: 3434523
-        x-exportParamName: "MessageId"
+        - name: userId
+          in: path
+          description: User id
+          required: true
+          type: string
+          x-example: bob.dole
+        - name: messageId
+          in: path
+          description: Message id
+          required: true
+          type: integer
+          format: int64
+          x-example: 3434523
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/UserMessage"
-        404:
-          description: "Message not found"
-  /v1/users/{userId}/messages/{messageId}/fun-facts:
+            $ref: '#/definitions/UserMessage'
+        '404':
+          description: Message not found
+  '/v1/users/{userId}/messages/{messageId}/fun-facts':
     get:
       tags:
-      - "user message"
-      summary: "Returns a fun facts about a message"
-      description: ""
-      operationId: "getFunFacts"
+        - user message
+      summary: Returns a fun facts about a message
+      description: ''
+      operationId: getFunFacts
       produces:
-      - "application/json"
+        - application/json
       parameters:
-      - name: "userId"
-        in: "path"
-        description: "User id"
-        required: true
-        type: "string"
-        x-example: "bob.dole"
-        x-exportParamName: "UserId"
-      - name: "messageId"
-        in: "path"
-        description: "Message id"
-        required: true
-        type: "integer"
-        format: "int64"
-        x-example: 3434523
-        x-exportParamName: "MessageId"
+        - name: userId
+          in: path
+          description: User id
+          required: true
+          type: string
+          x-example: bob.dole
+        - name: messageId
+          in: path
+          description: Message id
+          required: true
+          type: integer
+          format: int64
+          x-example: 3434523
       responses:
-        200:
-          description: "successful operation"
+        '200':
+          description: successful operation
           schema:
-            $ref: "#/definitions/FunFacts"
-        404:
-          description: "Message not found"
+            $ref: '#/definitions/FunFacts'
+        '404':
+          description: Message not found
 definitions:
   FunFacts:
-    type: "object"
+    type: object
     properties:
       exciting:
-        type: "boolean"
-        description: "Does the message have exciting content"
+        type: boolean
+        description: Does the message have exciting content
       palindrome:
-        type: "boolean"
-        description: "Is the message an paldindrome"
+        type: boolean
+        description: Is the message an paldindrome
       sad:
-        type: "boolean"
-        description: "Does the message have sad content"
-    description: "Fun facts about a users message"
-    example:
-      palindrome: true
-      exciting: true
-      sad: true
+        type: boolean
+        description: Does the message have sad content
+    description: Fun facts about a users message
   MessageBody:
-    type: "object"
+    type: object
     properties:
       message:
-        type: "string"
-        description: "The new message to be stored"
-    description: "Passed in when creating a new message"
-    example:
-      message: "message"
+        type: string
+        description: The new message to be stored
+    description: Passed in when creating a new message
   UserMessage:
-    type: "object"
+    type: object
     properties:
       generatedAt:
-        type: "string"
-        format: "date-time"
-        description: "The time the message was stored at"
+        type: string
+        format: date-time
+        description: The time the message was stored at
       message:
-        type: "string"
-        example: "Important details, see message"
-        description: "Message content"
+        type: string
+        example: 'Important details, see message'
+        description: Message content
       messageId:
-        type: "integer"
-        format: "int64"
-        description: "Message id"
+        type: integer
+        format: int64
+        description: Message id
       userId:
-        type: "string"
-        example: "bob.dole"
-        description: "User id"
-    description: "A message for a user"
-    example:
-      generatedAt: "2000-01-23T04:56:07.000+00:00"
-      messageId: 0
-      message: "Important details, see message"
-      userId: "bob.dole"
+        type: string
+        example: bob.dole
+        description: User id
+    description: A message for a user
   UserMessageList:
-    type: "object"
+    type: object
     properties:
       hasMore:
-        type: "boolean"
-        description: "If there are more messages for the user to pull"
+        type: boolean
+        description: If there are more messages for the user to pull
       messages:
-        type: "array"
-        description: "List of user messages"
+        type: array
+        description: List of user messages
         items:
-          $ref: "#/definitions/UserMessage"
-    description: "A list of user messages"
-    example:
-      hasMore: true
-      messages:
-      - generatedAt: "2000-01-23T04:56:07.000+00:00"
-        messageId: 0
-        message: "Important details, see message"
-        userId: "bob.dole"
-      - generatedAt: "2000-01-23T04:56:07.000+00:00"
-        messageId: 0
-        message: "Important details, see message"
-        userId: "bob.dole"
+          $ref: '#/definitions/UserMessage'
+    description: A list of user messages
